[gd_scene load_steps=7 format=2]

[ext_resource path="res://multiplayer/GameFieldMulti.gd" type="Script" id=1]
[ext_resource path="res://game_fonts/lmroman25.tres" type="DynamicFont" id=2]
[ext_resource path="res://multiplayer/PlayerDomain.tscn" type="PackedScene" id=3]
[ext_resource path="res://multiplayer/BasicPlayerInput.gd" type="Script" id=4]
[ext_resource path="res://multiplayer/OperationDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://multiplayer/BaseDomainDisplay.tscn" type="PackedScene" id=6]

[node name="GameFieldMulti" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1752.0
margin_bottom = 1016.0
color = Color( 0, 0, 0, 0.729412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource( 4 )

[node name="main_player_domain" parent="." instance=ExtResource( 3 )]
margin_left = 50.4537
margin_top = 169.861
margin_right = 470.454
margin_bottom = 802.861

[node name="OperationDisplayBasic" parent="." instance=ExtResource( 5 )]
margin_left = 592.0
margin_top = 284.947
margin_right = 1092.0
margin_bottom = 584.947

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PanelPlayerList" type="Panel" parent="HUD"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 399.0
margin_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblLocalPlayer" type="Label" parent="HUD/PanelPlayerList"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Local player name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boxList" type="VBoxContainer" parent="HUD/PanelPlayerList"]
margin_top = 49.9467
margin_right = 333.0
margin_bottom = 284.947
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy" type="GridContainer" parent="."]
margin_left = 1116.0
margin_top = 24.0
margin_right = 1716.0
margin_bottom = 1000.0

[node name="BaseDomainDisplay" parent="enemy" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 200.0

[node name="BaseDomainDisplay2" parent="enemy" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 600.0
margin_bottom = 404.0

[node name="BaseDomainDisplay3" parent="enemy" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 408.0
margin_right = 600.0
margin_bottom = 608.0

[node name="BaseDomainDisplay4" parent="enemy" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 612.0
margin_right = 600.0
margin_bottom = 812.0
